force-app/main/default/objects/sked_Future_Call_Event__e/fields/sked_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_Class_Name__c</fullName>
    <label>Class Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>