force-app/main/default/objects/sked_Future_Call_Event__e/fields/sked_Parameter_2_Data__c.field-meta.xml
<CustomField>
    <fullName>sked_Parameter_2_Data__c</fullName>
    <label>Parameter 2 Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>